service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redoc
  labels:
    app: redoc
spec:
  selector:
    app: redoc
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
